Change with 100% for flex-grow for overflowing issues

--- a/components/Article/InteractiveComponents/NameFinder/NameInput/styles.module.css
+++ b/components/Article/InteractiveComponents/NameFinder/NameInput/styles.module.css
@@ -18,6 +18,7 @@
 	outline: none;
 	border: none;
 	padding: 0rem 1rem;
+	flex-grow: 1;
 }
 
 .custom-input img {
