--- a/components/Article/InteractiveComponents/SurnameFinder/Input/styles.module.css
+++ b/components/Article/InteractiveComponents/SurnameFinder/Input/styles.module.css
@@ -17,7 +17,7 @@
 	color: var(--text);
 	outline: none;
 	border: none;
-	width: 100%;
+	flex-grow: 1;
 	padding: 0rem 1.4rem;
 }
 
